Banner Section Completed

--- a/index.html
+++ b/index.html
@@ -21,13 +21,106 @@
 
     <!-- ========= Header Section Start ========= -->
     <header>
-        
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+
+                <!-- Logo -->
+                <a class="navbar-brand fw-bold" href="#">Navbar</a>
+
+                <!-- Toggler Icon -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <!-- Nav Item -->
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Subscribe</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- Nav Item -->
+
+            </div>
+        </nav>
     </header>
     <!-- ========= Header Section End ========= -->
 
 
     <main>
         <!-- ========= Banner Section Start ========= -->
+        <section>
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+
+                <!-- Controller -->
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+
+                <!-- Slider -->
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="slider">
+                            <div class="w-50 text-white">
+                                <h2 class="display-4 fw-bold text-center">The perfect venue for your next event</h2>
+                                <p class="lead my-3 text-center lead">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit </p>
+                                <div class="d-flex justify-content-center">
+                                    <button class="btn py-3 px-5 btn-outline-primary fw-bold text-uppercase">Book Now</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                         <div class="slider">
+                            <div class="w-50 text-white">
+                                <h2 class="display-4 fw-bold text-center">The perfect venue for your next event</h2>
+                                <p class="lead my-3 text-center lead">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit </p>
+                                <div class="d-flex justify-content-center">
+                                    <button class="btn py-3 px-5 btn-outline-primary fw-bold text-uppercase">Book Now</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                         <div class="slider">
+                            <div class="w-50 text-white">
+                                <h2 class="display-4 fw-bold text-center">The perfect venue for your next event</h2>
+                                <p class="lead my-3 text-center lead">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit </p>
+                                <div class="d-flex justify-content-center">
+                                    <button class="btn py-3 px-5 btn-outline-primary fw-bold text-uppercase">Book Now</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Slider -->
+
+                <!-- Active Slide -->
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+
+            </div>
+        </section>
         <!-- ========= Banner Section End ========= -->
 
 
