--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <main>
         <!-- ========= Banner Section Start ========= -->
-        <section>
+        <section class="mb-4">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 
                 <!-- Controller -->
@@ -129,6 +129,89 @@
 
 
         <!-- ========= Package Section Start ========= -->
+        <section class="container py-5">
+                <h2 class="text-center display-4 fw-bold mb-5">Our Package</h2>
+
+            <div class="row">
+
+                <!-- Card -->
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="card border-0">
+                        <div class="card-body">
+                            <h2 class="card-title fw-bold display-4">$300</h2>
+                            <h3 class="fw-bold my-4">Business fair</h3>
+                            <p class="card-text text-muted">For most businesses event like book fair, craft fair.</p>
+                            <ul class="list-unstyled">
+                                <li><i class="fas fa-check-circle check"></i>limited space access</li>
+                                <li><i class="fas fa-check-circle check"></i>Secuirty facility</li>
+                                <li><i class="fas fa-check-circle check"></i>event support</li>
+                                <li><i class="fas fa-check-circle check"></i>Decoration design</li>
+                                <li><i class="fas fa-check-circle check"></i>Per day bill</li>
+                            </ul>
+                            <a href="#" class="btn btn-primary rounded-pill py-2 px-4  fw-bold border-0 package_btn">Choose Plan</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card -->
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="card border-0">
+                        <div class="card-body">
+                            <h2 class="card-title fw-bold display-4">$300</h2>
+                            <h3 class="fw-bold my-4">Business fair</h3>
+                            <p class="card-text text-muted">For most businesses event like book fair, craft fair.</p>
+                            <ul class="list-unstyled">
+                                <li><i class="fas fa-check-circle check"></i>limited space access</li>
+                                <li><i class="fas fa-check-circle check"></i>Secuirty facility</li>
+                                <li><i class="fas fa-check-circle check"></i>event support</li>
+                                <li><i class="fas fa-check-circle check"></i>Decoration design</li>
+                                <li><i class="fas fa-check-circle check"></i>Per day bill</li>
+                            </ul>
+                            <a href="#" class="btn btn-primary rounded-pill py-2 px-4  fw-bold border-0 package_btn">Choose Plan</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card -->
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="card border-0">
+                        <div class="card-body">
+                            <h2 class="card-title fw-bold display-4">$300</h2>
+                            <h3 class="fw-bold my-4">Business fair</h3>
+                            <p class="card-text text-muted">For most businesses event like book fair, craft fair.</p>
+                            <ul class="list-unstyled">
+                                <li><i class="fas fa-check-circle check"></i>limited space access</li>
+                                <li><i class="fas fa-check-circle check"></i>Secuirty facility</li>
+                                <li><i class="fas fa-check-circle check"></i>event support</li>
+                                <li><i class="fas fa-check-circle check"></i>Decoration design</li>
+                                <li><i class="fas fa-check-circle check"></i>Per day bill</li>
+                            </ul>
+                            <a href="#" class="btn btn-primary rounded-pill py-2 px-4  fw-bold border-0 package_btn">Choose Plan</a>
+                        </div>
+                    </div>
+                </div>
+                
+                <!-- Card -->
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="card border-0">
+                        <div class="card-body">
+                            <h2 class="card-title fw-bold display-4">$300</h2>
+                            <h3 class="fw-bold my-4">Business fair</h3>
+                            <p class="card-text text-muted">For most businesses event like book fair, craft fair.</p>
+                            <ul class="list-unstyled">
+                                <li><i class="fas fa-check-circle check"></i>limited space access</li>
+                                <li><i class="fas fa-check-circle check"></i>Secuirty facility</li>
+                                <li><i class="fas fa-check-circle check"></i>event support</li>
+                                <li><i class="fas fa-check-circle check"></i>Decoration design</li>
+                                <li><i class="fas fa-check-circle check"></i>Per day bill</li>
+                            </ul>
+                            <a href="#" class="btn btn-primary rounded-pill py-2 px-4  fw-bold border-0 package_btn">Choose Plan</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
         <!-- ========= Package Section End ========= -->
 
 
@@ -137,6 +220,64 @@
 
 
         <!-- ========= FAQ Section Start ========= -->
+        <section class="container py-5">
+            <h2 class="text-center display-4 fw-bold mb-5">Frequently Asked Question</h2>
+
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <div class="accordion" id="accordionExample">
+
+                        <!-- Accordion -->
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                   <p class="fs-5 text-dark"> What’s the difference between event design and event planning?</p> 
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Event design and event planning work hand in hand to deliver a successful event.Events by Knight offer tailor made events. This means we incorporate both event design and event planning to create that perfect event.
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Accordion -->
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    <p class="fs-5 text-dark"> What’s the difference between event design and event planning?</p> 
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Event design and event planning work hand in hand to deliver a successful event.Events by Knight offer tailor made events. This means we incorporate both event design and event planning to create that perfect event.
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Accordion -->
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    <p class="fs-5 text-dark"> What’s the difference between event design and event planning?</p> 
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Event design and event planning work hand in hand to deliver a successful event.Events by Knight offer tailor made events. This means we incorporate both event design and event planning to create that perfect event.
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="d-flex align-content-center justify-content-center">
+                        <img src="./Images/people.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- ========= FAQ Section End ========= -->
 
 
