--- a/index.html
+++ b/index.html
@@ -282,12 +282,51 @@
 
 
         <!-- ========= Contact Section Start ========= -->
+        <section class="py-5 container my-4">
+            <div class="row align-items-center g-5">
+                <div class="col-md-6">
+                    <div class="d-flex align-items-center justify-content-center">
+                        <img src="./Icons/undraw_contact_us_re_4qqt.svg" class="img-fluid" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="mb-3">
+                        <label for="exampleFormControlInput1" class="form-label">Full Name</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Programming Hero">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleFormControlTextarea1" class="form-label">Your Message</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" style="resize: none;"></textarea>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- ========= Contact Section End ========= -->
     </main>
 
 
     <!-- ========= Footer Section Start ========= -->
-    <footer></footer>
+    <footer class="bg-dark py-4 text-white">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="d-flex align-items-center justify-content-center h-100">
+                        <small>&copy; 2020 bike. All rights reserved</small>
+                    </div>
+                </div>
+                <div class="col-md-6"></div>
+                <div class="col-md-3">
+                    <p class="fs-5">Get the App</p>
+                    <a href="https://play.google.com/store/apps/details?id=com.learnprogramming.codecamp" target="_blank"><img src="./Images/google-play.png" alt=""></a>
+                    <a href="https://apps.apple.com/us/story/id1463652518?itscg=10000&itsct=" target="_blank"><img src="./Images/app-store.png" class="mt-3" alt=""></a>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- ========= Footer Section End ========= -->
 
 
