--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <div class="slider">
                             <div class="w-50 text-white">
                                 <h2 class="display-4 fw-bold text-center">The perfect venue for your next event</h2>
-                                <p class="lead my-3 text-center lead">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit </p>
+                                <p class="lead my-4 text-center lead">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit </p>
                                 <div class="d-flex justify-content-center">
                                     <button class="btn py-3 px-5 btn-outline-primary fw-bold text-uppercase">Book Now</button>
                                 </div>
@@ -87,7 +87,7 @@
                          <div class="slider">
                             <div class="w-50 text-white">
                                 <h2 class="display-4 fw-bold text-center">The perfect venue for your next event</h2>
-                                <p class="lead my-3 text-center lead">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit </p>
+                                <p class="lead my-4 text-center lead">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit </p>
                                 <div class="d-flex justify-content-center">
                                     <button class="btn py-3 px-5 btn-outline-primary fw-bold text-uppercase">Book Now</button>
                                 </div>
@@ -99,7 +99,7 @@
                          <div class="slider">
                             <div class="w-50 text-white">
                                 <h2 class="display-4 fw-bold text-center">The perfect venue for your next event</h2>
-                                <p class="lead my-3 text-center lead">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit </p>
+                                <p class="lead my-4 text-center lead">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit </p>
                                 <div class="d-flex justify-content-center">
                                     <button class="btn py-3 px-5 btn-outline-primary fw-bold text-uppercase">Book Now</button>
                                 </div>
@@ -132,7 +132,7 @@
         <section class="container py-5">
                 <h2 class="text-center display-4 fw-bold mb-5">Our Package</h2>
 
-            <div class="row">
+            <div class="row g-4 g-lg-0">
 
                 <!-- Card -->
                 <div class="col-lg-3 col-md-6 col-12">
@@ -224,7 +224,7 @@
             <h2 class="text-center display-4 fw-bold mb-5">Frequently Asked Question</h2>
 
             <div class="row align-items-center">
-                <div class="col-md-6">
+                <div class="col-lg-6 order-lg-first mt-4 mt-lg-0">
                     <div class="accordion" id="accordionExample">
 
                         <!-- Accordion -->
@@ -271,9 +271,9 @@
 
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="d-flex align-content-center justify-content-center">
-                        <img src="./Images/people.png" alt="">
+                <div class="col-lg-6 order-first">
+                    <div class="d-flex align-content-center justify-content-center w-100">
+                        <img src="./Images/people.png" class="img-fluid" alt="">
                     </div>
                 </div>
             </div>
@@ -300,7 +300,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="exampleFormControlTextarea1" class="form-label">Your Message</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" style="resize: none;"></textarea>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="I wanna say something...." style="resize: none;"></textarea>
                     </div>
                 </div>
             </div>
@@ -312,17 +312,23 @@
     <!-- ========= Footer Section Start ========= -->
     <footer class="bg-dark py-4 text-white">
         <div class="container">
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="d-flex align-items-center justify-content-center h-100">
+            <div class="row align-content-sm-center justify-content-sm-center">
+                <div class="col-lg-3 col-md-4 order-last order-md-first">
+                    <div class="d-flex align-items-center justify-content-center h-100 mt-3 mt-md-0">
                         <small>&copy; 2020 bike. All rights reserved</small>
                     </div>
                 </div>
-                <div class="col-md-6"></div>
-                <div class="col-md-3">
-                    <p class="fs-5">Get the App</p>
-                    <a href="https://play.google.com/store/apps/details?id=com.learnprogramming.codecamp" target="_blank"><img src="./Images/google-play.png" alt=""></a>
-                    <a href="https://apps.apple.com/us/story/id1463652518?itscg=10000&itsct=" target="_blank"><img src="./Images/app-store.png" class="mt-3" alt=""></a>
+                <div class="col-lg-6 col-md-2"></div>
+                <div class="col-lg-3 col-md-6 mx-auto mx-md-0">
+                    <div class="footer_app">
+                        <div>
+                            <p class="fs-5">Get the App</p>
+                            <div class="app">
+                                <a href="https://play.google.com/store/apps/details?id=com.learnprogramming.codecamp" target="_blank"><img src="./Images/google-play.png" alt=""></a>
+                                <a href="https://apps.apple.com/us/story/id1463652518?itscg=10000&itsct=" target="_blank"><img src="./Images/app-store.png" class="mt-lg-3 mt-0 style_media" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
