--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="container">
 
                 <!-- Logo -->
-                <a class="navbar-brand fw-bold" href="#">Navbar</a>
+                <a class="navbar-brand fw-bold" href="#">Polished Events</a>
 
                 <!-- Toggler Icon -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -75,9 +75,9 @@
                         <div class="slider">
                             <div class="w-50 text-white">
                                 <h2 class="display-4 fw-bold text-center">The perfect venue for your next event</h2>
-                                <p class="lead my-4 text-center lead">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit </p>
+                                <p class="lead my-4 text-center lead">Want to memorable your hosting event? Here is our event hosting center to make your event wonderful. Contact with us to get your book.</p>
                                 <div class="d-flex justify-content-center">
-                                    <button class="btn py-3 px-5 btn-outline-primary fw-bold text-uppercase">Book Now</button>
+                                    <a href="https://billetto.co.uk/l/how-to-host-an-event" target="_blank" class="btn py-3 px-5 btn-outline-primary fw-bold text-uppercase">Book Now</a>
                                 </div>
                             </div>
                         </div>
@@ -87,9 +87,9 @@
                          <div class="slider">
                             <div class="w-50 text-white">
                                 <h2 class="display-4 fw-bold text-center">The perfect venue for your next event</h2>
-                                <p class="lead my-4 text-center lead">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit </p>
+                                <p class="lead my-4 text-center lead">Want to memorable your hosting event? Here is our event hosting center to make your event wonderful. Contact with us to get your book.</p>
                                 <div class="d-flex justify-content-center">
-                                    <button class="btn py-3 px-5 btn-outline-primary fw-bold text-uppercase">Book Now</button>
+                                    <a href="https://billetto.co.uk/l/how-to-host-an-event" target="_blank" class="btn py-3 px-5 btn-outline-primary fw-bold text-uppercase">Book Now</a>
                                 </div>
                             </div>
                         </div>
@@ -99,9 +99,9 @@
                          <div class="slider">
                             <div class="w-50 text-white">
                                 <h2 class="display-4 fw-bold text-center">The perfect venue for your next event</h2>
-                                <p class="lead my-4 text-center lead">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit </p>
+                                <p class="lead my-4 text-center lead">Want to memorable your hosting event? Here is our event hosting center to make your event wonderful. Contact with us to get your book.</p>
                                 <div class="d-flex justify-content-center">
-                                    <button class="btn py-3 px-5 btn-outline-primary fw-bold text-uppercase">Book Now</button>
+                                    <a href="https://billetto.co.uk/l/how-to-host-an-event" target="_blank" class="btn py-3 px-5 btn-outline-primary fw-bold text-uppercase">Book Now</a>
                                 </div>
                             </div>
                         </div>
@@ -132,6 +132,19 @@
         <section class="container py-5">
                 <h2 class="text-center display-4 fw-bold mb-5">Our Package</h2>
 
+            <!-- Toast -->
+            <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="toast-header">
+                    <img src="..." class="rounded me-2" alt="...">
+                    <strong class="me-auto">Bootstrap</strong>
+                    <small>11 mins ago</small>
+                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                </div>
+                <div class="toast-body">
+                    Hello, world! This is a toast message.
+                </div>
+            </div>
+
             <div class="row g-4 g-lg-0">
 
                 <!-- Card -->
@@ -157,15 +170,15 @@
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="card border-0">
                         <div class="card-body">
-                            <h2 class="card-title fw-bold display-4">$300</h2>
-                            <h3 class="fw-bold my-4">Business fair</h3>
-                            <p class="card-text text-muted">For most businesses event like book fair, craft fair.</p>
+                            <h2 class="card-title fw-bold display-4">$500</h2>
+                            <h3 class="fw-bold my-4">wedding basic</h3>
+                            <p class="card-text text-muted">For weddings with basic plan and limited item</p>
                             <ul class="list-unstyled">
-                                <li><i class="fas fa-check-circle check"></i>limited space access</li>
-                                <li><i class="fas fa-check-circle check"></i>Secuirty facility</li>
-                                <li><i class="fas fa-check-circle check"></i>event support</li>
+                                <li><i class="fas fa-check-circle check"></i>Full space access</li>
+                                <li><i class="fas fa-check-circle check"></i>Food arrangement</li>
+                                <li><i class="fas fa-check-circle check"></i>mangement support</li>
                                 <li><i class="fas fa-check-circle check"></i>Decoration design</li>
-                                <li><i class="fas fa-check-circle check"></i>Per day bill</li>
+                                <li><i class="fas fa-check-circle check"></i>Billed as shift</li>
                             </ul>
                             <a href="#" class="btn btn-primary rounded-pill py-2 px-4  fw-bold border-0 package_btn">Choose Plan</a>
                         </div>
@@ -174,19 +187,23 @@
 
                 <!-- Card -->
                 <div class="col-lg-3 col-md-6 col-12">
-                    <div class="card border-0">
-                        <div class="card-body">
-                            <h2 class="card-title fw-bold display-4">$300</h2>
+                    <div class="card unique_card border-0 rounded-3">
+                        <div class="card-body text-white">
+                            <span class="position-absolute fs-6 translate-middle badge rounded-pill bg-danger">
+                                Hot
+                                <span class="visually-hidden">unread messages</span>
+                            </span>
+                            <h2 class="card-title fw-bold display-4">$800</h2>
                             <h3 class="fw-bold my-4">Business fair</h3>
-                            <p class="card-text text-muted">For most businesses event like book fair, craft fair.</p>
+                            <p class="card-text">For most weddings with premium plans</p>
                             <ul class="list-unstyled">
-                                <li><i class="fas fa-check-circle check"></i>limited space access</li>
-                                <li><i class="fas fa-check-circle check"></i>Secuirty facility</li>
-                                <li><i class="fas fa-check-circle check"></i>event support</li>
-                                <li><i class="fas fa-check-circle check"></i>Decoration design</li>
-                                <li><i class="fas fa-check-circle check"></i>Per day bill</li>
+                                <li><i class="fas fa-check-circle diff_check"></i>Full space access</li>
+                                <li><i class="fas fa-check-circle diff_check"></i>Dedicated team</li>
+                                <li><i class="fas fa-check-circle diff_check"></i>Buffet food</li>
+                                <li><i class="fas fa-check-circle diff_check"></i>premium Decoration</li>
+                                <li><i class="fas fa-check-circle diff_check"></i>pay as plan</li>
                             </ul>
-                            <a href="#" class="btn btn-primary rounded-pill py-2 px-4  fw-bold border-0 package_btn">Choose Plan</a>
+                            <a href="#" class="btn customize btn-primary rounded-pill py-2 px-4  fw-bold border-0 package_btn bg-white">Choose Plan</a>
                         </div>
                     </div>
                 </div>
@@ -195,15 +212,15 @@
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="card border-0">
                         <div class="card-body">
-                            <h2 class="card-title fw-bold display-4">$300</h2>
-                            <h3 class="fw-bold my-4">Business fair</h3>
-                            <p class="card-text text-muted">For most businesses event like book fair, craft fair.</p>
+                            <h2 class="card-title fw-bold display-4">$1200</h2>
+                            <h3 class="fw-bold my-4">Corporate event</h3>
+                            <p class="card-text text-muted">For most corporate business events</p>
                             <ul class="list-unstyled">
-                                <li><i class="fas fa-check-circle check"></i>limited space access</li>
-                                <li><i class="fas fa-check-circle check"></i>Secuirty facility</li>
-                                <li><i class="fas fa-check-circle check"></i>event support</li>
-                                <li><i class="fas fa-check-circle check"></i>Decoration design</li>
-                                <li><i class="fas fa-check-circle check"></i>Per day bill</li>
+                                <li><i class="fas fa-check-circle check"></i>Dedicated team</li>
+                                <li><i class="fas fa-check-circle check"></i>Dedicated team</li>
+                                <li><i class="fas fa-check-circle check"></i>Buffet food</li>
+                                <li><i class="fas fa-check-circle check"></i>premium Decoration</li>
+                                <li><i class="fas fa-check-circle check"></i>pay as plan</li>
                             </ul>
                             <a href="#" class="btn btn-primary rounded-pill py-2 px-4  fw-bold border-0 package_btn">Choose Plan</a>
                         </div>
@@ -283,7 +300,10 @@
 
         <!-- ========= Contact Section Start ========= -->
         <section class="py-5 container my-4">
-            <div class="row align-items-center g-5">
+
+            <h2 class="text-center display-4 fw-bold mb-5">Contact Us</h2>
+
+            <div class="row align-items-center g-md-5 g-3">
                 <div class="col-md-6">
                     <div class="d-flex align-items-center justify-content-center">
                         <img src="./Icons/undraw_contact_us_re_4qqt.svg" class="img-fluid" alt="">
@@ -336,6 +356,15 @@
     <!-- ========= Footer Section End ========= -->
 
 
+
+    <!-- For Toast -->
+    <script>
+        window.onload = (event) => {
+            let myAlert = document.querySelectorAll('.toast');
+            let bsAlert = new bootstrap.Toast(myAlert);
+            bsAlert.show();
+        }
+    </script>
 
     <!-- $$$$$ Link Bootstrap JS Bundle $$$$$ -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
