Full Website Completed

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                 <!-- Slider -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="slider">
+                        <div class="slider slider_one">
                             <div class="w-50 text-white">
-                                <h2 class="display-4 fw-bold text-center">The perfect venue for your next event</h2>
-                                <p class="lead my-4 text-center lead">Want to memorable your hosting event? Here is our event hosting center to make your event wonderful. Contact with us to get your book.</p>
+                                <h2 class="display-4 fw-bold text-center">The perfect venue for your wedding</h2>
+                                <p class="lead my-4 text-center lead">Want to memorable wedding event? Here is our event wedding managing team to make your wedding Wonderful. Contact with us to get your book.</p>
                                 <div class="d-flex justify-content-center">
                                     <a href="https://billetto.co.uk/l/how-to-host-an-event" target="_blank" class="btn py-3 px-5 btn-outline-primary fw-bold text-uppercase">Book Now</a>
                                 </div>
@@ -84,10 +84,10 @@
                     </div>
 
                     <div class="carousel-item">
-                         <div class="slider">
+                         <div class="slider slider_two">
                             <div class="w-50 text-white">
-                                <h2 class="display-4 fw-bold text-center">The perfect venue for your next event</h2>
-                                <p class="lead my-4 text-center lead">Want to memorable your hosting event? Here is our event hosting center to make your event wonderful. Contact with us to get your book.</p>
+                                <h2 class="display-4 fw-bold text-center">Most Delicious and Rich Food for your Guest</h2>
+                                <p class="lead my-4 text-center lead">You'll found here most delicious food in our hosting event. Your guest will thank you for the invitation you sent. Checkout our latest Menu. </p>
                                 <div class="d-flex justify-content-center">
                                     <a href="https://billetto.co.uk/l/how-to-host-an-event" target="_blank" class="btn py-3 px-5 btn-outline-primary fw-bold text-uppercase">Book Now</a>
                                 </div>
@@ -96,7 +96,7 @@
                     </div>
 
                     <div class="carousel-item">
-                         <div class="slider">
+                         <div class="slider slider_three">
                             <div class="w-50 text-white">
                                 <h2 class="display-4 fw-bold text-center">The perfect venue for your next event</h2>
                                 <p class="lead my-4 text-center lead">Want to memorable your hosting event? Here is our event hosting center to make your event wonderful. Contact with us to get your book.</p>
@@ -133,15 +133,12 @@
                 <h2 class="text-center display-4 fw-bold mb-5">Our Package</h2>
 
             <!-- Toast -->
-            <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-                <div class="toast-header">
-                    <img src="..." class="rounded me-2" alt="...">
-                    <strong class="me-auto">Bootstrap</strong>
-                    <small>11 mins ago</small>
+            <div class="toast show" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="toast-body d-flex justify-content-between align-items-center ">
+                    <div><strong><i class="fas fa-gift text-primary me-2"></i> 20% Off on Next Booking</strong></div>
+                    <div>
                     <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
                 </div>
-                <div class="toast-body">
-                    Hello, world! This is a toast message.
                 </div>
             </div>
 
@@ -262,12 +259,12 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    <p class="fs-5 text-dark"> What’s the difference between event design and event planning?</p> 
+                                    <p class="fs-5 text-dark"> How early do we need to start planning an event</p> 
                                 </button>
                             </h2>
                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    Event design and event planning work hand in hand to deliver a successful event.Events by Knight offer tailor made events. This means we incorporate both event design and event planning to create that perfect event.
+                                    There is no specific answer to this question. At least, 6 days before the event day. Within this 6 days you can send invitation and manage proper decoration for your event. Contact with our dedicated team for more details. 
                                 </div>
                             </div>
                         </div>
@@ -276,12 +273,12 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingThree">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    <p class="fs-5 text-dark"> What’s the difference between event design and event planning?</p> 
+                                    <p class="fs-5 text-dark"> What is your refund and cancellation policy?</p> 
                                 </button>
                             </h2>
                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    Event design and event planning work hand in hand to deliver a successful event.Events by Knight offer tailor made events. This means we incorporate both event design and event planning to create that perfect event.
+                                   You can refund your money after 24 hours of the booking any package. However, if you refund your money you have to pay 12% charge of your package. To learn more about Refund Policy contact with us. 
                                 </div>
                             </div>
                         </div>
